[package]
name = "data-transform"
version = "0.1.0"
edition = "2021"
description = "A data transformation tool for working with tabular data"
repository = "https://github.com/system0x7/dt"
homepage = "https://github.com/system0x7/dt"
license = "MIT"
authors = ["system0x7"]
keywords = ["data", "csv", "transform", "cli"]
categories = ["command-line-utilities", "data-structures"]
exclude = ["target/", ".git/", ".github/", "benches/", "CHANGELOG.md"]

[[bin]]
name = "dt"
path = "src/main.rs"

[dependencies]
# Core data processing
polars = { version = "0.44", features = ["lazy", "dtype-full", "parquet", "json"] }

# Parsing
pest = "2.7"
pest_derive = "2.7"

# CLI
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
